--- a/index.html
+++ b/index.html
@@ -1,13 +1,159 @@
-<html>
-    <head>
-        <title>webpage1</title>
-    </head>
-    <body>
-        <h1>This is my first webpage</h1>
-        <p>
-            My name is Gunika 
-            UID- 24BAI70979
-        </p>
-    </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Happy 1st Anniversary ❤</title>
+  <style>
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+      color: #333;
+      min-height: 100vh;
+    }
+    header {
+      text-align: center;
+      padding: 80px 20px;
+      color: #fff;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.95;
+    }
+    section {
+      max-width: 1100px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+    .card {
+      background: #fff;
+      border-radius: 20px;
+      padding: 30px;
+      margin-bottom: 40px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+    }
+    .card h2 {
+      color: #ee5a7a;
+      margin-bottom: 15px;
+      font-size: 2rem;
+    }
+    .card p {
+      font-size: 1.05rem;
+      line-height: 1.7;
+    }
+    .timeline {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .moment {
+      background: #fff0f4;
+      padding: 20px;
+      border-radius: 15px;
+    }
+    .moment h3 {
+      color: #e8436f;
+      margin-bottom: 8px;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+    }
+    .photo {
+      background: #fbd3dc;
+      height: 200px;
+      border-radius: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #555;
+      font-size: 0.9rem;
+    }
+    .love-note {
+      text-align: center;
+      font-size: 1.2rem;
+      font-style: italic;
+      color: #444;
+    }
+    footer {
+      text-align: center;
+      padding: 30px 15px;
+      background: rgba(255,255,255,0.3);
+      font-size: 0.95rem;
+    }
+    .heart {
+      color: #e8436f;
+    }
+  </style>
+</head>
+<body>
 
+  <header>
+    <h1>Happy 1st Anniversary <span class="heart">❤</span></h1>
+    <p>365 days of love, laughter & memories</p>
+  </header>
+
+  <section>
+    <div class="card">
+      <h2>Our Story</h2>
+      <p>
+        One year ago, two hearts chose each other — and everything changed.
+        This year has been filled with late-night talks, silly fights, endless laughs,
+        and a love that only grew stronger with time.
+      </p>
+    </div>
+
+    <div class="card">
+      <h2>Our Favorite Moments</h2>
+      <div class="timeline">
+        <div class="moment">
+          <h3>The First Day</h3>
+          <p>The day our story officially began.</p>
+        </div>
+        <div class="moment">
+          <h3>First Date</h3>
+          <p>Nervous smiles and unforgettable feelings.</p>
+        </div>
+        <div class="moment">
+          <h3>Countless Memories</h3>
+          <p>Small moments that meant everything.</p>
+        </div>
+        <div class="moment">
+          <h3>One Year Strong</h3>
+          <p>Still choosing each other, every day.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>Memory Gallery</h2>
+      <div class="gallery">
+        <div class="photo">Add Photo 1</div>
+        <div class="photo">Add Photo 2</div>
+        <div class="photo">Add Photo 3</div>
+        <div class="photo">Add Photo 4</div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>A Note From My Heart</h2>
+      <p class="love-note">
+        "Thank you for being my safe place, my biggest support,
+        and my favorite person. I can’t wait to create a lifetime of
+        memories with you."
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    Made with <span class="heart">❤</span> for our 1st Anniversary
+  </footer>
+
+</body>
+</html>
